Edit backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
 # build
 FROM golang:1.19 as builder
 WORKDIR /app
-COPY go.mod go.sum ./
+COPY . .
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux go build -o ./momo-backend
+RUN CGO_ENABLED=0 GOOS=linux go build -o ./momo-backend ./cmd/api/
 
 # release
 FROM alpine:latest
