--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -24,9 +24,9 @@ build:
     - >
       docker build
       --build-arg VERSION=$VERSION
-      --tag $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHORT_SHA
+      --tag $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
       .
-    - docker push $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHORT_SHA
+    - docker push $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
 
 sonarqube-sast:
   stage: test
