Edit backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 # build
 FROM golang:1.19 as builder
-WORKDIR /app
+WORKDIR /usr/src/app
 COPY . .
 RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -o ./momo-backend ./cmd/api/
@@ -8,6 +8,6 @@ RUN CGO_ENABLED=0 GOOS=linux go build -o ./momo-backend ./cmd/api/
 # release
 FROM alpine:latest
 WORKDIR /app
-COPY --from=builder /app/momo-backend ./momo-backend
+COPY --from=builder /usr/src/app/momo-backend ./momo-backend
 EXPOSE 8090
 ENTRYPOINT ["./momo-backend"]
