--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -35,11 +35,11 @@ sonarqube-sast:
     - build
   script:
     - cd frontend
-    - sonar-scanner
+    - >
+      sonar-scanner
       -Dsonar.projectKey=${SONAR_PROJECT_KEY_FRONT}
       -Dsonar.host.url=${SONARQUBE_URL}
-      -Dsonar.login=${SONAR_LOGIN_FRON}
-      -Dsonar.sources=.
+      -Dsonar.login=${SONAR_LOGIN_FRON} 
       -Dsonar.qualitygate.wait=true
       -Dsonar.projectName=17_YURIKRYVINYA_MOMO_FRONT
 
