--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -39,7 +39,7 @@ sonarqube-sast:
       sonar-scanner
       -Dsonar.projectKey=${SONAR_PROJECT_KEY_FRONT}
       -Dsonar.host.url=${SONARQUBE_URL}
-      -Dsonar.login=${SONAR_LOGIN_FRON} 
+      -Dsonar.login=${SONAR_LOGIN_FRONT} 
       -Dsonar.qualitygate.wait=true
       -Dsonar.projectName=17_YURIKRYVINYA_MOMO_FRONT
 
