--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -24,9 +24,9 @@ build:
     - >
       docker build
       --build-arg VERSION=$VERSION
-      --tag $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
+      --tag $CI_REGISTRY_IMAGE/momo-backend:$VERSION
       .
-    - docker push $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE/momo-backend:$VERSION
 
 sonarqube-sast:
   stage: test
@@ -62,7 +62,7 @@ upload-backend-latest:
     - until docker info; do sleep 1; done
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - docker pull $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
-    - docker tag $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/momo-backend:latest
+    - docker pull $CI_REGISTRY_IMAGE/momo-backend:$VERSION
+    - docker tag $CI_REGISTRY_IMAGE/momo-backend:$VERSION $CI_REGISTRY_IMAGE/momo-backend:latest
     - docker push $CI_REGISTRY_IMAGE/momo-backend:latest
 
