--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -24,9 +24,9 @@ build:
     - >
       docker build
       --build-arg VERSION=$VERSION
-      --tag $CI_REGISTRY_IMAGE/momo-frontend:$CI_COMMIT_SHA
+      --tag $CI_REGISTRY_IMAGE/momo-frontend:$VERSION
       .
-    - docker push $CI_REGISTRY_IMAGE/momo-frontend:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE/momo-frontend:$VERSION
 
 sonarqube-sast:
   stage: test
@@ -62,6 +62,6 @@ upload-frontend-latest:
     - until docker info; do sleep 1; done
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - docker pull $CI_REGISTRY_IMAGE/momo-frontend:$CI_COMMIT_SHA
-    - docker tag $CI_REGISTRY_IMAGE/momo-frontend:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/momo-frontend:latest
+    - docker pull $CI_REGISTRY_IMAGE/momo-frontend:$VERSION
+    - docker tag $CI_REGISTRY_IMAGE/momo-frontend:$VERSION $CI_REGISTRY_IMAGE/momo-frontend:latest
     - docker push $CI_REGISTRY_IMAGE/momo-frontend:latest
