Change in frontend Dockerfile nginxproxy to nginx

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,9 +7,8 @@ COPY . .
 RUN npm run build
 
 # release
-FROM nginxproxy/nginx-proxy:1.3
+FROM nginx:latest
 WORKDIR /app
 COPY --from=builder /usr/src/app/dist/ /usr/share/nginx/html
-COPY nginx.tmpl /app/
 EXPOSE 80
 
