--- a/kubernetes/frontend/configmap.yaml
+++ b/kubernetes/frontend/configmap.yaml
@@ -36,6 +36,26 @@ data:
             try_files $uri $uri/ /index.html;
           }
 
+          location /products {
+              proxy_pass http://backend:8090;
+          }
+
+          location /categories {
+              proxy_pass http://backend:8090;
+          }
+
+          location /orders {
+              proxy_pass http://backend:8090;
+          }
+
+          location /metrics {
+              proxy_pass http://backend:8090;
+          }
+
+          location /auth/whoami {
+              proxy_pass http://backend:8090;
+          }
+  
           location /api {
               proxy_pass http://backend:8090;
           }
