Edit file frontend/.gitlab-ci.yml

--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -73,7 +73,7 @@ deploy:
     entrypoint: ['']
   script:
     - kubectl config set-cluster ${KUBE_CLUSTER} --server="${KUBE_SERVER}" --insecure-skip-tls-verify=true
-    - kubectl config set-credentials kyn07c0 --token="${KUBE_TOKEN}"
+    - kubectl config set-credentials ${KUBE_USER} --token="${KUBE_TOKEN}"
     - kubectl config set-context certificate-authority --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
     - kubectl config use-context ${KUBE_USER}@${KUBE_CLUSTER}
     - kubectl apply -f kubernetes/frontend
