--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -74,6 +74,6 @@ deploy:
   script:
     - kubectl config set-cluster ${KUBE_CLUSTER} --server="${KUBE_SERVER}" --insecure-skip-tls-verify=true
     - kubectl config set-credentials ${KUBE_USER} --token="${KUBE_TOKEN}"
-    - kubectl config set-context certificate-authority --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
+    - kubectl config set-context ${KUBE_USER}@${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
     - kubectl config use-context ${KUBE_USER}@${KUBE_CLUSTER}
     - kubectl apply -f kubernetes/frontend
