--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   VERSION: 1.0.${CI_PIPELINE_ID}
+  SAST_EXCLUDED_ANALYZERS: "eslint,semgrep,nodejs-scan,gosec"
 
 include:
   - template: Security/SAST.gitlab-ci.yml
