--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   SAST_EXCLUDED_ANALYZERS: "eslint,semgrep,nodejs-scan,gosec"
 
 include:
-  - template: Security/SAST.gitlab-ci.yml
+  - template: Jobs/SAST.gitlab-ci.yml
   - project: 'templates/ci'
     file: 'DockerInDockerTemplate.yml'  
 
