--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -1,9 +1,8 @@
 variables:
   VERSION: 1.0.${CI_PIPELINE_ID}
-  SAST_EXCLUDED_ANALYZERS: "eslint,semgrep,nodejs-scan,gosec"
 
 include:
-  - template: Jobs/SAST.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
   - project: 'templates/ci'
     file: 'DockerInDockerTemplate.yml'  
 
