--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,13 +2,13 @@
 FROM node:16-alpine3.16 as builder
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
 COPY . .
+RUN npm install
 RUN npm run build
 
 # release
 FROM nginx:latest
 WORKDIR /app
-COPY --from=builder /usr/src/app/dist/ /usr/share/nginx/html
+COPY --from=builder /usr/src/app/dist/ /usr/share/nginx/html/
 EXPOSE 80
 
