--- a/kubernetes/frontend/service.yaml
+++ b/kubernetes/frontend/service.yaml
@@ -7,11 +7,12 @@ metadata:
   labels:
     app: frontend
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
+    nodePort: 30082
   selector:
     app: frontend
 
