--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -1,62 +1,17 @@
-#---
-#apiVersion: networking.k8s.io/v1
-#kind: Ingress
-#metadata:
-#  name: frontend
-#  namespace: default
-#  annotations:
-#    ingress.alb.yc.io/subnets: e9b7jsdnk1e2i55sk2hn,e9bso2lt7adp4ucuuo1p
-#    ingress.alb.yc.io/external-ipv4-address: 158.160.44.104
-#    ingress.alb.yc.io/group-name: "momo-node-group"
-#spec:
-#  tls:
-#  - secretName: yc-certmgr-cert-id-fpqh2jbuugnnnko9cv4o
-#    hosts:
-#    - "kyn07c0.ru"  
-#  rules:
-#  - host: "kyn07c0.ru"
-#    http:
-#      paths:
-#      - path: /
-#        pathType: Prefix
-#        backend:
-#          service:
-#            name: frontend
-#            port:
-#              number: 80
-
-
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt
-  namespace: cert-manager
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: kyn07c0@yandex.ru
-    privateKeySecretRef:
-      name: letsencrypt
-    solvers:
-    - http01:
-        ingress:
-          class: nginx
-
-
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minimal-ingress
+  name: frontend-ingress
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt"
+    cert-manager.io/cluster-issuer: "momo-{{ .Values.global.environment }}"
 spec:
   tls:
     - hosts:
       - kyn07c0.ru
-      secretName: letsencrypt
+      secretName: momo-{{ .Values.global.environment }}
   rules:
     - host: kyn07c0.ru
       http:
