--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "momo-{{ .Values.global.environment }}"
+    cert-manager.io/cluster-issuer: "momo-cluster"
 spec:
   tls:
     - hosts:
