Edit frontend Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 # build
 FROM node:16-alpine3.18 as builder
-ARG VUE_APP_API_URL=http://kyn07c0.ru
-ARG NODE_ENV=production
+ARG VUE_APP_API_URL
+ARG VUE_APP_VERSION
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY . .
