--- a/kubernetes/frontend/acme-issuer.yaml
+++ b/kubernetes/frontend/acme-issuer.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt
+  name: momo-cert
   namespace: cert-manager
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: kyn07c0@yandex.ru
     privateKeySecretRef:
-      name: letsencrypt
+      name: momo-cert
     solvers:
     - http01:
         ingress:
