--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -6,14 +6,14 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt"
+    cert-manager.io/cluster-issuer: "momo-cert"
 spec:
   tls:
     - hosts:
-      - kyn07c0.ru
-      secretName: letsencrypt 
+      - "kyn07c0.ru"
+      secretName: momo-cert 
   rules:
-    - host: kyn07c0.ru
+    - host: "kyn07c0.ru"
       http:
         paths:
         - path: /
