--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,5 +13,7 @@ RUN npm run build
 FROM nginx:latest
 ARG VERSION=${VERSION}
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
+COPY .nginx/default.conf /etc/nginx/conf.d/default.conf
+CMD ["nginx", "-g", "daemon off;"]
 EXPOSE 80
 
