--- a/kubernetes/frontend/deployment.yaml
+++ b/kubernetes/frontend/deployment.yaml
@@ -31,7 +31,7 @@ spec:
             cpu: "200m"
         volumeMounts:
         - name: nginx-conf
-          mountPath: /etc/nginx/nginx.conf
+          mountPath: /etc/nginx/conf.d/default.conf
           subPath: nginx.conf
           readOnly: true
         ports:
