--- a/kubernetes/momo-store-chart/templates/acme-issuer.yaml
+++ b/kubernetes/momo-store-chart/templates/acme-issuer.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
+  namespace: cert-manager
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
@@ -12,4 +13,3 @@ spec:
     - http01:
         ingress:
           class: nginx
-
