--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -3,18 +3,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: frontend-ingress
-  #annotations:
-  #  kubernetes.io/ingress.class: nginx
-  #  cert-manager.io/cluster-issuer: letsencrypt
-  #  acme.cert-manager.io/http01-edit-in-place: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx      
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: "nginx"
+  ingressClassName: nginx
   tls:
   - hosts:
-    - "kyn07c0.ru"
+    - kyn07c0.ru
     secretName: letsencrypt
   rules:
-  - host: "kyn07c0.ru"
+  - host: kyn07c0.ru
     http:
       paths:
       - path: /
