--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,15 @@
 # build
 FROM node:16-alpine3.18 as builder
-ARG VERSION=${VERSION}
-ENV NODE_ENV=development
-ENV VUE_APP_API_URL=/
 WORKDIR /usr/src/app
 COPY package*.json ./
-COPY . .
 RUN npm install
+COPY . .
 RUN npm run build
 
 # release
-FROM nginx:latest
-ARG VERSION=${VERSION}
-COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
+FROM nginx:stable
+RUN mkdir /app
+COPY --from=builder /usr/src/app/dist /app
+COPY nginx-momo.conf /etc/nginx/conf.d/nginx-momo.conf
 EXPOSE 80
-
+CMD nginx -g "daemon off;"
