--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -4,16 +4,15 @@ kind: Ingress
 metadata:
   name: frontend-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx      
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"      
+    cert-manager.io/cluster-issuer: "letsencrypt"
 spec:
-  ingressClassName: nginx
   tls:
   - hosts:
-    - kyn07c0.ru
+    - "kyn07c0.ru"
     secretName: letsencrypt
   rules:
-  - host: kyn07c0.ru
+  - host: "kyn07c0.ru"
     http:
       paths:
       - path: /
