--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,14 @@
 # build
 FROM golang:1.19 as builder
-WORKDIR /usr/src/app
-COPY . .
+WORKDIR /app/src
+COPY go.mod go.sum ./
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux go build -o ./momo-backend ./cmd/api/
+COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -o backend ./cmd/api/
 
 # release
 FROM alpine:latest
 WORKDIR /app
-COPY --from=builder /usr/src/app/momo-backend ./momo-backend
+COPY --from=builder /app/src/backend ./backend
 EXPOSE 8081
-ENTRYPOINT ["./momo-backend"]
+ENTRYPOINT ["./backend"]
