--- a/kubernetes/backend/secrets.yaml
+++ b/kubernetes/backend/secrets.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: docker-config-secret
-  namespace: default
+  namespace: momo-store
 data:
   .dockerconfigjson: >-
     ewoJImF1dGhzIjogewoJCSJnaXRsYWIucHJha3Rpa3VtLXNlcnZpY2VzLnJ1OjUwNTAiOiB7CgkJCSJhdXRoIjogImMzUmtMVEF4Tnkwd01EWTZhMHBRTjNBME1XYz0iCgkJfQoJfQp9
