--- a/kubernetes/backend/service.yaml
+++ b/kubernetes/backend/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: default
+  namespace: momo-store
   labels:
     app: backend
 spec:
