--- a/kubernetes/frontend/configmap.yaml
+++ b/kubernetes/frontend/configmap.yaml
@@ -3,36 +3,30 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-conf
+  namespace: momo-store
 data:
-  nginx.conf: |
-    user nginx;
-    worker_processes  auto;
-    error_log  /var/log/nginx/error.log notice;
-    pid        /var/run/nginx.pid;
-    events {
-        worker_connections  1024;
-    }
+  nginx-momo.conf: |
+    server {
 
-    http {
-        include       /etc/nginx/mime.types;
-        default_type  application/octet-stream;
+      resolver kube-dns.kube-system.svc.cluster.local valid=10s;
 
-        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                          '$status $body_bytes_sent "$http_referer" '
-                          '"$http_user_agent" "$http_x_forwarded_for"';
+      listen 80;
+      server_name localhost;
 
-        access_log  /var/log/nginx/access.log  main;
+      location / {
+        root   /app;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+      }
 
-        sendfile        on;
-        keepalive_timeout  65;
-        server {
-
-          listen 80;
-
-          location / {
-            root   /usr/share/nginx/html;
-            index  index.html;
-            try_files $uri $uri/ /index.html;
-          }
-        }
+      location /api {
+        set $api_name backend.momo-store.svc.cluster.local;
+        rewrite /api/(.*) /$1 break;
+        proxy_set_header  Host $host;
+        proxy_set_header  X-Real-IP $remote_addr;
+        proxy_set_header  X-Forwarded-For $remote_addr;
+        proxy_set_header  X-Forwarded-Host $remote_addr;
+        proxy_redirect off;
+        proxy_pass http://$api_name:8081;
+      }
     }
