--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: frontend-ingress
+  namespace: momo-store
   annotations:
     kubernetes.io/ingress.class: "nginx"      
     cert-manager.io/cluster-issuer: "letsencrypt"
