--- a/kubernetes/frontend/service.yaml
+++ b/kubernetes/frontend/service.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend 
+  name: frontend
+  namespace: momo-store
   labels:
     app: frontend
 spec:
