--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,5 @@
-# build
-FROM golang:1.19 as builder
-WORKDIR /app/src
-COPY go.mod go.sum ./
-RUN go mod download
+FROM golang:1.19-alpine
+WORKDIR /usr/src/app
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o backend ./cmd/api/
-
-# release
-FROM alpine:latest
-WORKDIR /app
-COPY --from=builder /app/src/backend ./backend
 EXPOSE 8081
-ENTRYPOINT ["./backend"]
+ENTRYPOINT ["go", "run", "./cmd/api"]
