--- a/kubernetes/frontend/deployment.yaml
+++ b/kubernetes/frontend/deployment.yaml
@@ -31,7 +31,7 @@ spec:
             memory: "1024Mi"
             cpu: "200m"
         volumeMounts:
-        - name: nginx-config
+        - name: nginx-conf
           mountPath: /etc/nginx/conf.d/default.conf
           subPath: default.conf
           readOnly: true
@@ -45,9 +45,9 @@ spec:
       imagePullSecrets:
       - name: docker-config-secret
       volumes:
-      - name: nginx-config
+      - name: nginx-conf
         configMap:
-          name: nginx-config
+          name: nginx-conf
           items:
           - key: nginx.conf
             path: default.conf 
