Edit backend Dockerfile

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -66,14 +66,14 @@ upload-backend-latest:
     - docker tag $CI_REGISTRY_IMAGE/momo-backend:$VERSION $CI_REGISTRY_IMAGE/momo-backend:latest
     - docker push $CI_REGISTRY_IMAGE/momo-backend:latest
 
-#deploy:
-#  stage: deploy
-#  image: 
-#   name: bitnami/kubectl:latest
-#    entrypoint: ['']
-#  script:
-#    - kubectl config set-cluster ${KUBE_CLUSTER} --server="${KUBE_SERVER}" --insecure-skip-tls-verify=true 
-#    - kubectl config set-credentials ${KUBE_USER} --token="${KUBE_TOKEN}"
-#    - kubectl config set-context ${KUBE_USER}@${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
-#    - kubectl config use-context ${KUBE_USER}@${KUBE_CLUSTER}
-#    - kubectl apply -f kubernetes/backend
+deploy:
+  stage: deploy
+  image: 
+   name: bitnami/kubectl:latest
+    entrypoint: ['']
+  script:
+    - kubectl config set-cluster ${KUBE_CLUSTER} --server="${KUBE_SERVER}" --insecure-skip-tls-verify=true 
+    - kubectl config set-credentials ${KUBE_USER} --token="${KUBE_TOKEN}"
+    - kubectl config set-context ${KUBE_USER}@${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
+    - kubectl config use-context ${KUBE_USER}@${KUBE_CLUSTER}
+    - kubectl apply -f kubernetes/backend
