--- a/kubernetes/frontend/ingress.yaml
+++ b/kubernetes/frontend/ingress.yaml
@@ -16,10 +16,31 @@ spec:
   - host: "kyn07c0.ru"
     http:
       paths:
-      - path: /
+      - path: "/"
         pathType: Prefix
         backend:
           service:
             name: frontend
             port:
               number: 80
+      - path: "/auth/whoami"
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              number: 80
+      - path: "/products"
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              number: 80
+      - path: "/categories"
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              number: 80 
