--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -57,7 +57,7 @@ upload-frontend-latest:
   stage: release
   needs:
     - build
-    - sonarqube-sast
+#    - sonarqube-sast
   before_script:
     - until docker info; do sleep 1; done
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
