--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -28,20 +28,20 @@ build:
       .
     - docker push $CI_REGISTRY_IMAGE/momo-frontend:$VERSION
 
-#sonarqube-sast:
-#  stage: test
-#  image: sonarsource/sonar-scanner-cli:latest
-#  needs:
-#    - build
-#  script:
-#    - cd frontend
-#    - >
-#      sonar-scanner
-#      -Dsonar.projectKey=${SONAR_PROJECT_KEY_FRONT}
-#      -Dsonar.host.url=${SONARQUBE_URL}
-#      -Dsonar.login=${SONAR_LOGIN_FRONT} 
-#      -Dsonar.qualitygate.wait=true
-#      -Dsonar.projectName=17_YURIKRYVINYA_MOMO_FRONT
+sonarqube-sast:
+  stage: test
+  image: sonarsource/sonar-scanner-cli:latest
+  needs:
+    - build
+  script:
+    - cd frontend
+    - >
+      sonar-scanner
+      -Dsonar.projectKey=${SONAR_PROJECT_KEY_FRONT}
+      -Dsonar.host.url=${SONARQUBE_URL}
+      -Dsonar.login=${SONAR_LOGIN_FRONT} 
+      -Dsonar.qualitygate.wait=true
+      -Dsonar.projectName=17_YURIKRYVINYA_MOMO_FRONT
 
 spotbugs-sast:
   stage: test
