--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
   - test
   - release
   - notify
-  - deploy
+  - release
 
 build:
   stage: build
@@ -24,9 +24,9 @@ build:
     - >
       docker build
       --build-arg VERSION=$VERSION
-      --tag $CI_REGISTRY_IMAGE/momo-backend:$VERSION
+      --tag $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
       .
-    - docker push $CI_REGISTRY_IMAGE/momo-backend:$VERSION
+    - docker push $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
 
 sonarqube-sast:
   stage: test
@@ -62,18 +62,29 @@ upload-backend-latest:
     - until docker info; do sleep 1; done
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - docker pull $CI_REGISTRY_IMAGE/momo-backend:$VERSION
-    - docker tag $CI_REGISTRY_IMAGE/momo-backend:$VERSION $CI_REGISTRY_IMAGE/momo-backend:latest
+    - docker pull $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA
+    - docker tag $CI_REGISTRY_IMAGE/momo-backend:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/momo-backend:latest
     - docker push $CI_REGISTRY_IMAGE/momo-backend:latest
 
-deploy:
-  stage: deploy
-  image: 
-    name: bitnami/kubectl:latest
-    entrypoint: ['']
+release-helm:
+  stage: release
+  image:
+    name: dtzar/helm-kubectl:3.13.0
   script:
-    - kubectl config set-cluster ${KUBE_CLUSTER} --server="${KUBE_SERVER}" --insecure-skip-tls-verify=true 
-    - kubectl config set-credentials ${KUBE_USER} --token="${KUBE_TOKEN}"
-    - kubectl config set-context ${KUBE_USER}@${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
-    - kubectl config use-context ${KUBE_USER}@${KUBE_CLUSTER}
-    - kubectl apply -f kubernetes/backend
+    - sed -i "s/{{DOCKER_CONFIG_JSON}}/$DOCKER_CONFIG_JSON/" helm/momo-backend-chart/templates/secrets.yaml
+    - sed -i "s/{{TAG}}/$CI_COMMIT_SHA/" helm/momo-backend-chart/values.yaml
+    - sed -i "s/{{VERSION}}/$VERSION/" helm/momo-backend-chart/Chart.yaml
+    - helm package momo-store-backend-chart --version ${VERSION}
+    - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_BACKEND} --upload-file momo-store-backend-${VERSION}.tgz
+
+#deploy:
+#  stage: deploy
+#  image: 
+#    name: bitnami/kubectl:latest
+#    entrypoint: ['']
+#  script:
+#    - kubectl config set-cluster ${KUBE_CLUSTER} --server="${KUBE_SERVER}" --insecure-skip-tls-verify=true 
+#    - kubectl config set-credentials ${KUBE_USER} --token="${KUBE_TOKEN}"
+#    - kubectl config set-context ${KUBE_USER}@${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=${KUBE_USER}
+#    - kubectl config use-context ${KUBE_USER}@${KUBE_CLUSTER}
+#    - kubectl apply -f kubernetes/backend
