Edit path to backend chart

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -74,7 +74,7 @@ release-helm-chart:
     - sed -i "s/{{DOCKER_CONFIG_JSON}}/$DOCKER_CONFIG_JSON/" helm/backend-chart/templates/secrets.yaml
     - sed -i "s/{{TAG}}/$CI_COMMIT_SHA/" helm/backend-chart/values.yaml
     - sed -i "s/{{VERSION}}/$VERSION/" helm/backend-chart/Chart.yaml
-    - helm package helm/momo-store-backend-chart --version ${VERSION}
+    - helm package helm/backend-chart --version ${VERSION}
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_BACKEND} --upload-file momo-store-backend-${VERSION}.tgz
 
 #deploy:
