Edit path to backend chart

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -71,9 +71,9 @@ release-helm-chart:
   image: alpine/helm:latest
   script:
     - cd helm
-    - sed -i "s/{{DOCKER_CONFIG_JSON}}/$DOCKER_CONFIG_JSON/" templates/secrets.yaml
-    - sed -i "s/{{TAG}}/$CI_COMMIT_SHA/" values.yaml
-    - sed -i "s/{{VERSION}}/$VERSION/" Chart.yaml
+    - sed -i "s/{{DOCKER_CONFIG_JSON}}/$DOCKER_CONFIG_JSON/" backend-chart/templates/secrets.yaml
+    - sed -i "s/{{TAG}}/$CI_COMMIT_SHA/" backend-chart/values.yaml
+    - sed -i "s/{{VERSION}}/$VERSION/" backend-chart/Chart.yaml
     - helm package backend-chart --version ${VERSION}
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_BACKEND} --upload-file momo-store-backend-${VERSION}.tgz
 
