Edit path to backend chart

--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -75,8 +75,7 @@ release-helm-chart:
     - sed -i "s/{{TAG}}/$CI_COMMIT_SHA/" backend-chart/values.yaml
     - sed -i "s/{{VERSION}}/$VERSION/" backend-chart/Chart.yaml
     - helm package backend-chart --version ${VERSION}
-    - ls .
-    - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_BACKEND} --upload-file momo-backend-${VERSION}.tgz
+    - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_BACKEND} --upload-file backend-${VERSION}.tgz
 
 #deploy:
 #  stage: deploy
