--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -77,6 +77,21 @@ release-helm-chart:
     - helm package backend-chart --version ${VERSION}
     - curl -u ${NEXUS_HELM_USER}:${NEXUS_HELM_PASS} ${NEXUS_HELM_REPO_BACKEND} --upload-file backend-${VERSION}.tgz
 
+install-helm-chart:
+  variables:
+    GIT_STRATEGY: none
+  stage: deploy
+  image: alpine/helm:latest
+  script:
+    - mkdir ~/.kube
+    - echo "${KUBE_CONFIG}" > ~/.kube/config
+    - helm repo add nexus ${NEXUS_HELM_REPO_BACKEND} --username ${NEXUS_HELM_USER} --password ${NEXUS_HELM_PASS}
+    - helm repo update
+    - helm upgrade backend nexus/backend -i --atomic
+
+
+
+
 #deploy:
 #  stage: deploy
 #  image: 
