--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -83,9 +83,11 @@ install-helm-chart:
     GIT_STRATEGY: none
   stage: deploy
   image: alpine/helm:latest
-  script:
+  before_script:
     - mkdir ~/.kube
     - echo "${KUBE_CONFIG}" > ~/.kube/config
+    - chmod go-r ~/.kube/config
+  script:
     - helm repo add nexus ${NEXUS_HELM_REPO_BACKEND} --username ${NEXUS_HELM_USER} --password ${NEXUS_HELM_PASS}
     - helm repo update
     - helm upgrade backend nexus/backend -i --atomic --namespace default 
