--- a/helm/prometheus/templates/deployment.yaml
+++ b/helm/prometheus/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
       - name: prometheus
         image: prom/prometheus
         args:
-          - --config.file=/etc/prometheus/prometheus.yml
+          #- --config.file=/etc/prometheus/prometheus.yml
           - --web.enable-lifecycle
           - --log.level=debug
         ports:
