--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,16 +3,10 @@ WORKDIR /app
 COPY go.mod go.sum /app/
 RUN  go mod download
 COPY . /app
-RUN go build -o /app /app/...
+RUN go build -o /app /app/
 
 FROM alpine:3.16
 WORKDIR /app
 COPY --from=builder /app/api /app/api
 EXPOSE 8081 
 ENTRYPOINT ["/app/api"]
-
-
-#FROM alpine/curl:3.14
-#COPY api /bin/api
-#EXPOSE 8081
-#ENTRYPOINT ["/bin/api"]
