--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY go.mod go.sum ./ 
 RUN  go mod download
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o main /cmd/api
+RUN CGO_ENABLED=0 GOOS=linux go build -o main ./cmd/api
 
 FROM alpine:3.16
 WORKDIR /app
