fix build backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,10 +3,10 @@ WORKDIR /app
 COPY go.mod go.sum ./ 
 RUN  go mod download
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux go build -o main ./cmd/api
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main ./cmd/api
 
-FROM alpine:3.16
-WORKDIR /app
+FROM alpine:3.17.0
+WORKDIR /root/
 COPY --from=builder /app/main .
 EXPOSE 8081
 ENTRYPOINT [",/main"]
